tests/ui/project/invalid.stderr
error: unexpected token
  --> $DIR/invalid.rs:15:14
   |
15 |     #[project(foo)] //~ ERROR unexpected token
   |              ^

error: aborting due to previous error

